# rsctf

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  LICENSE.txt  LICENSING.md  NOTICE  README.md  build.rs  docker-compose.yml
.agents/skills/avoid-ai-writing/: SKILL.md
.agents/skills/humanizer/: SKILL.md
.github/: dependabot.yml
.github/workflows/: chart.yml  ci.yml  docs.yml  image.yml  release-validation.yml  worker-agent-release.yml
agents/byoc-agent/: Cargo.toml  Dockerfile
agents/byoc-agent/src/: agent.rs  main.rs
agents/worker-agent/: Cargo.toml  README.md  rsctf-worker-agent.service
agents/worker-agent/src/: backoff.rs  config.rs  enroll.rs  installation.rs  main.rs  readiness.rs  security.rs  tls.rs
agents/worker-agent/src/client/: control.rs  data.rs  mod.rs
agents/worker-agent/src/runtime/: docker.rs  mod.rs
agents/worker-agent/src/runtime/docker/: endpoints.rs  integration_tests.rs  inventory.rs  preflight.rs  support.rs  tombstones.rs  windows_acl.rs
charts/rsctf/: Chart.yaml  values.schema.json  values.yaml
charts/rsctf/templates/: NOTES.txt  _helpers.tpl  challenge-namespace.yaml  configmap.yaml  deployment.yaml  ingress.yaml  migrate-job.yaml  postgresql.yaml  pvc.yaml  rbac.yaml  redis.yaml  (+4 more)
deploy/: .env.example  .gitignore  Caddyfile  README.md  compose.ad-vpn.yml  compose.caddy.yml  compose.capture.yml  compose.docker.yml  compose.roles.ad-vpn.yml  compose.roles.capture.yml  compose.roles.docker.yml  compose.roles.workers.yml  compose.roles.yml  compose.workers.yml  compose.yml
docs/: RULES.md  index.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/.vitepress/: config.mts
docs/deploy/: docker.md  github.md  index.md  kubernetes.md  operations.md  reverse-proxy.md  scaling.md  security.md  workers.md
docs/getting-started/: first-login.md  index.md  install-wizard.md
docs/organizers/: challenges.md  games.md  index.md  live-event.md  sample-repository.md
docs/players/: accounts-and-teams.md  attack-defense.md  index.md  jeopardy.md  koth-scoring-handbook.md  koth.md  rules.md
docs/reference/: byoc-ssh.md  configuration.md  installer.md  troubleshooting.md
docs/scripts/: build-attack-defense-pdf.mjs
lib/worker-protocol/: Cargo.toml  README.md
lib/worker-protocol/src/: control.rs  data.rs  enrollment.rs  framing.rs  lib.rs  workload.rs
scripts/: bootstrap-worker.ps1  bootstrap-worker.sh  install-worker.ps1  install-worker.sh  install.sh  test-bootstrap-worker.sh  test-install-shim.sh  test-install-worker.sh  test-install.sh  test-worker-installer-shim.sh  validate-compose-security.sh  validate-helm-chart.sh
src/: app_state.rs  lib.rs  main.rs  server.rs
src/controllers/: api_token.rs  assets.rs  exercise.rs  honeypot.rs  info.rs  mod.rs  oauth.rs  workers.rs
src/extensions/: database.rs
src/hubs/: admin.rs  admission.rs  attack.rs  container.rs  mod.rs  monitor.rs  signalr.rs  tests.rs  user.rs
src/middlewares/: mod.rs  privilege_authentication.rs  rate_limiter.rs  rate_limiter_tests.rs  request_security.rs  user_activity.rs
src/migrations/: m0001_init.rs  m0002_extra.rs  m0003_managers.rs  m0004_repo.rs  m0005_anticheat.rs  m0006_builds.rs  m0007_ad_team.rs  m0008_repo_game.rs  m0009_ad_container.rs  m0010_koth_container.rs  m0011_suspicion_koth.rs  m0012_network_mode.rs  m0013_shared_container.rs  m0014_ad_sla_credit.rs  m0015_original_archive.rs  m0016_log_fingerprint.rs  m0017_container_access_event.rs  m0018_honeypot_hit.rs  m0019_flag_egress_event.rs  m0020_ad_vpn_peer.rs  m0021_hot_indexes.rs  m0022_more_hot_indexes.rs  m0023_koth_token_mint.rs  m0024_koth_token_indexes.rs  m0025_advance_race_unique.rs  m0026_ad_attack_dedup_unique.rs  m0027_hot_filter_indexes.rs  m0028_ad_round_id_indexes.rs  m0029_flag_context_index.rs  m0030_instance_uniqueness.rs  m0031_ad_vpn_address_uniqueness.rs  m0032_koth_capability_integrity.rs  m0033_ad_credential_uniqueness.rs  m0034_ad_round_atomicity.rs  m0035_ad_epoch_scoring.rs  m0036_ad_epoch_score_rollups.rs  m0037_ad_service_score_rollups.rs  m0038_koth_epoch_scoring.rs  m0039_koth_epoch_score_rollups.rs  m0040_koth_integrity.rs  (+41 more)
src/models/: mod.rs
src/services/: anti_cheat.rs  audit.rs  blob_refs.rs  cache.rs  captcha.rs  capture_safety.rs  challenge_images.rs  challenge_workloads.rs  container.rs  event_bus.rs  game_config.rs  health.rs  honeypot_listener.rs  k8s.rs  mail.rs  mod.rs  participation_evidence.rs  proxy_admission.rs  runtime_topology.rs  token.rs  traffic.rs  worker_pki.rs
src/storage/: blob_storage.rs  local_blob_storage.rs  mod.rs  s3_blob_storage.rs
src/utils/: archive.rs  codec.rs  crypto_utils.rs  database.rs  datetime.rs  enums.rs  error.rs  flag_generator.rs  mod.rs  redis.rs  scoring.rs  shared.rs  single_flight.rs  upload.rs
tests/: checker_sandbox.rs  logic.rs  routes.rs  storage.rs
tests/load/: README.md  REPORT.md  ad-submit-batch.js  ad-submit-batch.mjs  admin-fixtures.mjs  admin-lifecycle.js  admin-lifecycle.mjs  applib.mjs  byoc-agents.mjs  byoc-busy.mjs  byoc-harness.js  byoc.mjs  cheat-cohort.js  cheat-environment.js  cheat-event.mjs  cheat-result.js  cheat-retention.js  cohort-seed.js  competition-gates.js  competition-readiness.js  docker-scope.js  edit-lifecycle-fixtures.mjs  edit-lifecycle.js  edit-lifecycle.mjs  fixture-image-config.js  fixtures.mjs  fleet-ownership.js  koth-deadline-cleanup.js  koth-reset-receipts.js  lib.mjs  lifecycle-load-model.js  lifecycle-recovery.js  lifecycle-state-file.js  lifecycle.mjs  log-audit.mjs  mint_tokens_local.mjs  multi-domain-acceptance.js  multi-domain-acceptance.mjs  observe.mjs  observer-evidence.js  (+21 more)
tools/: render_ad_diagrams.py
tools/ad-scoring-sim/: README.md  REPORT.md  historical-audit.sql  lib.mjs  plot.py  results.json  simulate.mjs  test.mjs
web/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.test.json  vite.config.mts
web/plugins/: vite-fetch-contributors.ts
web/public/: manifest.webmanifest
web/scripts/: run-tests.mjs
web/src/: Api.ts  App.tsx  main.tsx
(+690 files in other folders)
