[workspace]

[package]
name = "rsctf-worker-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared wire protocol for the RSCTF trusted worker plane"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "rt"] }
uuid = { version = "1", features = ["serde", "v4"] }
